--- a/package.json
+++ b/package.json
@@ -36,8 +36,9 @@
   },
   "dependencies": {
     "immutable": "^3.8.1",
+    "moment": "^2.18.1",
     "react": "^15.3.2",
-    "react-day-picker": "^3.1.1",
+    "react-datepicker": "^0.46.0",
     "react-dom": "^15.3.2",
     "react-redux": "^4.4.6",
     "react-router": "^4.1.1",
